# builders_apps

./: .eslintrc.json  .gitignore  .prettierignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  cdk.context.json  cdk.json  codegen.yml  deploy.sh  devcontainer.json  labels.go  load.py  package-lock.json  package.json  photo-session-schema.md  playwright.config.ts  pyproject.toml  schema.graphql  vitest.config.ts
.devcontainer/: configure-aws-sso.sh  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.husky/: pre-commit
agenda/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
csat-qr-display/: .env  README.md  package-lock.json  package.json  tsconfig.json
docs/: branch-naming-guide.md  deployment-guide.md  favorite-sessions-feature.md
e2e-tests/: test-1.spec.ts
frontend/: .gitignore  index.html  package.json  vite.config.ts
labelprinter/: .gitignore  README.md  go.mod  go.sum
lambda/: profileHandlers.ts
lib/: app-stack.ts  backend-stack.ts  cdk_test-stack.ts  csat-qr-display-stack.ts  frontend-stack.ts  profiles-stack.ts  tv-display-stack.ts
scripts/: create_sponsor.py  deploy.sh  populate-dynamodb.ts  validate-graphql-schema.sh
test/: agendaFetcher.test.ts  cdk_test.test.ts  checkInService.test.ts  cognito-stack.test.ts  cognito-user.test.ts  cognito.test.ts  eventbrite-webhook.test.ts  lambda-graphql-resolver.test.ts  lambda-view-profile.test.ts  lambda.test.ts  profileHandlers.test.ts  sessionizeParser.test.ts
tv-display/: .gitignore  README.md  index.html  package-lock.json  package.json  (+4 more)
(+188 files in other folders)
